add Local Storage function

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
 	<div class="wrapper">
 		<div class="top">
-					<h1 class="title">My Library</h1>
+					<h1 class="header">My Library</h1>
 		<h2>start adding some books to the library</h2>
 		<button class="book-form-toggle"> New book</button>
 		</div>
